# heart-disease-risk-predictor

./: .gitignore  main.py  params.yaml  pyproject.toml
metrics/: data_stats.json
notebooks/: exp.ipynb
src/: download_data.py  model.py  preprocess.py
