[project]
name = "heart-disease-risk-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.65.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]
